policies/allowedrepos/constraint_pkg/disallowed_initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-disallowed
spec:
  containers: []
